2008-01-22 Brian Matherly <brian@gramps-project.org>
	* src/plugins/KinshipReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DescendReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/BookReport.py:
	* src/plugins/TimeLine.py:
	* src/plugins/Calendar.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/CustomBookText.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	More refactoring in the report system. Book report should work again.

2008-01-22 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/ReportBase/_Bibliography.py
	* src/ReportBase/_Endnotes.py
	* src/GrampsLocale/__init__.py
	* src/gen/db/dbconst.py
	* src/gen/lib/test/date_test.py
	* src/plugins/CalculateEstimatedDates.py
	* src/BasicUtils/__init__.py
	* src/test/utils_test.py
	* src/GrampsDbUtils/importdbdir.py
	* po/test/po_test.py
	add filename to $Id: $ to allow automatic filling in of svn properties

2008-01-22 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/* Everything but src/images/* and src/data/* add correct svn 
	properties with the commands:
	svn propset -R svn:mime-type text/plain src/
	svn propset -R svn:eol-style native src/
	svn propset -R svn:keywords Id src/
	See below why the Id keyword is enough. From svn help propset
	svn:keywords   - Keywords to be expanded.  Valid keywords are:
      URL, HeadURL             - The URL for the head version of the object.
      Author, LastChangedBy    - The last person to modify the file.
      Date, LastChangedDate    - The date/time the object was last modified.